--- a/index.html
+++ b/index.html
@@ -61,6 +61,6 @@
 			<img class="medium-circle" src="./img/mid-eclipse.svg" alt="" />
 			<img class="small-circle" src="./img/small-eclipse.svg" alt="" />
 		</main>
-		<iframe src='https://webchat.botframework.com/embed/sameer-8c1c-bot?s=P4A5uEKckwA.2zTOULG80_bz_5bgwq-MKUJM0DheYtUqXwczMeEYgVo'  style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
+		<iframe src='https://webchat.botframework.com/embed/seetharamaraju-bot?s=bnGp25z-xJg.-NEYfrzDJlWX5Ee4NYQVJsnB38w8FmM99T99KqAgHW8'  style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
 	</body>
 </html>
